refactor naming, logics, add room manager
- separate room logic to a service
- add RoomManager to manage rooms
- add stylings for chat messages
- rename multiple components for better semantics

--- a/cmd/web/base.templ
+++ b/cmd/web/base.templ
@@ -8,14 +8,14 @@ templ Base() {
 		<head>
 			<meta charset="utf-8"/>
 			<meta name="viewport" content="width=device-width,initial-scale=1"/>
-			<title>Go Blueprint Hello</title>
-			<link href="assets/css/output.css" rel="stylesheet"/>
-			<script src="assets/js/htmx.min.js"></script>
+			<title>RPlatform</title>
+			<link href="/assets/css/output.css" rel="stylesheet"/>
+			<script src="/assets/js/htmx.min.js"></script>
 			<script src="https://cdn.jsdelivr.net/npm/htmx-ext-ws@2.0.4" integrity="sha384-1RwI/nvUSrMRuNj7hX1+27J8XDdCoSLf0EjEyF69nacuWyiJYoQ/j39RT1mSnd2G" crossorigin="anonymous"></script>
 			@toast.Script()
 		</head>
 		<body class="bg-[#1A1B27]">
-			<main class="max-w-sm mx-auto p-4 ">
+			<main class="container mx-auto p-4 ">
 				{ children... }
 			</main>
 		</body>
