--- a/cmd/web/chat_room.templ
+++ b/cmd/web/chat_room.templ
@@ -3,19 +3,33 @@ package web
 import "rplatform-echo/internal/repository"
 import "rplatform-echo/cmd/web/components/input"
 import "rplatform-echo/cmd/web/components/button"
+import "time"
+import "fmt"
+import "rplatform-echo/utils"
 
-templ ChatRoom(room *repository.Room, userID string, msgs *[]repository.GetAllMessagesRow) {
+templ ChatRoom(room *repository.Room, userID string, email string, msgs []repository.GetInitalMessagesRow) {
 	@Base() {
 		<style>
 			.htmx-added {
 				transform: translateY(40px);
 			}
 		</style>
+		<div>Hello, { email }</div>
 		<div class="text-xl font-bold py-4 text-center">Room { room.Name }</div>
 		<div hx-ext="ws" ws-connect={ "/dashboard/chatroom/" + room.ID }>
 			<div id="notifications"></div>
+			<div id="indicator" class="htmx-indicator">Loading...</div>
 			<ul class="text-slate-900 space-y-1" id="chat_room" data-user-id={ userID }>
-				for _, msg := range *msgs {
+				if len(msgs) >= utils.MessagesLimit {
+					<li
+						hx-get={ fmt.Sprintf("/dashboard/room/%s/messages?createdAt=%s", room.ID, msgs[0].CreatedAt.Time.UTC().Format(time.RFC3339)) }
+						hx-trigger="revealed"
+						hx-swap="afterbegin"
+						hx-target="#chat_room"
+						hx-indicator="#indicator"
+					>Load older messages</li>
+				}
+				for _, msg := range msgs {
 					<li
 						data-user-id={ userID }
 						class={ "bg-pink-200 text-left rounded-md px-4 py-2 w-fit transition-transform duration-300", templ.KV("bg-cyan-200! text-right! ml-auto", msg.UserID == userID) }
@@ -48,6 +62,7 @@ templ ChatRoom(room *repository.Room, userID string, msgs *[]repository.GetAllMe
 	}
 }
 
+// For a incomming chat
 templ ChatMessage(email string, message string, userID string, senderID string) {
 	<div id="chat_room" hx-swap-oob="beforeend">
 		<li
@@ -66,4 +81,36 @@ templ ChatMessage(email string, message string, userID string, senderID string) 
 			</p>
 		</li>
 	</div>
+}
+
+// For lazy loading older chat messages
+templ OlderMessages(msgs []repository.GetPaginatedMessagesRow, userID string) {
+	if (len(msgs) >= utils.MessagesLimit) {
+		<li
+			hx-get={ fmt.Sprintf("/dashboard/room/%s/messages?createdAt=%s", msgs[0].RoomID, msgs[0].CreatedAt.Time.UTC().Format(time.RFC3339)) }
+			hx-trigger="revealed"
+			hx-swap="afterbegin"
+			hx-target="#chat_room"
+			hx-indicator="#indicator"
+		>
+			Load older messages
+		</li>
+	}
+	for _, msg := range msgs {
+		<li
+			data-user-id={ msg.UserID }
+			class={ "bg-pink-200 text-left rounded-md px-4 py-2 w-fit transition-transform duration-300", templ.KV("bg-cyan-200! text-right! ml-auto", msg.UserID == userID) }
+		>
+			<p>
+				<strong>
+					if msg.UserID != userID {
+						{ msg.UserEmail }:
+					} else {
+						You:
+					}
+				</strong>
+				{ msg.Content }
+			</p>
+		</li>
+	}
 }
